added deployment files

--- a/poc/src/config/app_config.yml
+++ b/poc/src/config/app_config.yml
@@ -1,3 +1,4 @@
 git_config:
   git_user: pintu4146
   token: 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
+  dco: hell_dckr_pat_LrrIizxXawkAli1E13eNUYcpSS8
