--- a/poc/pyproject.toml
+++ b/poc/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
 pyyaml = "^6.0.1"
+mysqlclient = "^2.2.4"
+sqlalchemy = "^2.0.28"
+pytest = "^8.1.1"
+httpx = "^0.27.0"
 
 
 [build-system]
